0.1.9 - 08-12-15
  * Generate HTML5 doctype document (previously XHTML)

0.1.8 - 08-12-15
  * <button> tag added
  * Explicitly use button tag in all button elements except
    - Animated Buttons
    - Focusable Button
    - Buttons
  * Create a new FocusableButtonTag class to introduce a tabindex="0" in a div tag
  * Updated unit tests with the new tag changes
  * Created the following button tests and documentions
    - Active Button
    - Disabled Button
    - Progress Button
  * Seperate Documents into it's own document files

0.1.7 - 08-07-15
  * Parse generated HTML document using Nokogiri;
  * Support Nokogiri 1.5 to 1.6
  * Add Block-style syntax examples
  * Fix documentation

0.1.6 - 08-05-15
  * Fix component not resolving components in CLI tool
  * Componentize
    * Elements
      - button
      - container
      - content
      - header
      - label
      - segment
    * Collections
      - grid
      - menu
      - message

0.1.5 - 08-04-15
  * Componentize
    * Elements
      - button
      - container
      - content
    * Collections
      - grid

0.1.4 - 08-04-15
  * Documentation updates
  * Added Badges
  * Optimize Viewport for Mobile
  * Componentize Elements

0.1.3 - 07-21-15
  * Add Bundler as a dependency
  * Updated Documentations

0.1.2 - 07-20-15
  * Add ID support for Buttons
  * Updated tests and docs with ID support
  * Add more support to mobile

0.1.1 - 07-15-15
  * Fix items not containing href path
  * Added more documentation for Buttons
  * Rspec Test Fixes
  * Deleted empty files
  * Added the website script

0.1.0 - 07-14-15
  * Added Buttons via '__Button|Text__'

    The following buttons are implemented
    - standard
    - focusable
    - ordinality
    - animated
    - vertical animated
    - animated fade
    - icon button
    - labeled icon button
    - basic icon
    - custom button
    - inverted button
    - basic inverted button
    - group buttons
    - icon group buttons
    - icon group conditionals
