@@ -633,6 +633,53 @@ __Icon Button|Icon</code>
       </div>
     </div>
   </div>
+<!-- -->
+  <div class="ui basic segment">
+    <h2 id="variations" class="ui dividing left aligned header">Variations</h2>
+  </div>
+<!-- -->
+  <div class="ui basic segment">
+    <h4 id="social" class="ui header">Social</h4>
+    <p>A button can be formatted to link to a social website</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui attached segment">
+      <div class="ui top attached label">Social</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <button class="ui facebook button"><i class="facebook icon"></i>Facebook</button>
+      <button class="ui twitter button"><i class="twitter icon"></i>Twitter</button>
+      <button class="ui google plus button"><i class="google plus icon"></i>Google Plus</button>
+      <button class="ui vk button"><i class="vk icon"></i>VK</button>
+      <button class="ui linkedin button"><i class="linkedin icon"></i>LinkedIn</button>
+      <button class="ui instagram button"><i class="instagram icon"></i>Instagram</button>
+      <button class="ui youtube button"><i class="youtube icon"></i>YouTube</button>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>__Facebook Button|Icon:Facebook, Facebook__</code>
+        <br />
+        <code>__Twitter Button|Icon:Twitter, Twitter__</code>
+        <br />
+        <code>__Google Plus Button|Icon:Google Plus, Google Plus__</code>
+        <br />
+        <code>__VK Button|Icon:VK, VK__</code>
+        <br />
+        <code>__LinkedIn Button|Icon:LinkedIn, LinkedIn__</code>
+        <br />
+        <code>__Instagram Button|Icon:Instagram, Instagram__</code>
+        <br />
+        <code>__YouTube Button|Icon:YouTube, YouTube__</code>
+        <br />
+      </div>
+    </div>
+  </div>
+<!-- -->
 </div>
 
 </body>
