@@ -1,5 +1,7 @@
 0.1.9 - 08-12-15
   * Generate HTML5 doctype document (previously XHTML)
+  * Added the following button tests and documentation
+    - Social
 
 0.1.8 - 08-12-15
   * <button> tag added
